--- a/src/main/java/com/mycompany/ala/gui/OrderServiceFormView.form
+++ b/src/main/java/com/mycompany/ala/gui/OrderServiceFormView.form
@@ -28,10 +28,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel5" min="-2" max="-2" attributes="0"/>
           </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jPanel6" max="32767" attributes="0"/>
-          </Group>
+          <Component id="jPanel6" alignment="1" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -41,8 +38,8 @@
                   <Component id="jPanel1" max="32767" attributes="0"/>
                   <Component id="jPanel5" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="26" max="32767" attributes="0"/>
-              <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jPanel6" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -460,13 +457,16 @@
         <Component class="javax.swing.JComboBox" name="comboBoxType">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="6">
+              <StringArray count="9">
                 <StringItem index="0" value=" "/>
-                <StringItem index="1" value="ESTRUTURAL"/>
-                <StringItem index="2" value="MELHORIA"/>
-                <StringItem index="3" value="NDS"/>
-                <StringItem index="4" value="PODA"/>
-                <StringItem index="5" value="TERMOGR&#xc1;FICA"/>
+                <StringItem index="1" value="DEFEITO"/>
+                <StringItem index="2" value="ENCAIXE"/>
+                <StringItem index="3" value="ESTRUTURAL"/>
+                <StringItem index="4" value="MELHORIA"/>
+                <StringItem index="5" value="NDS"/>
+                <StringItem index="6" value="PODA"/>
+                <StringItem index="7" value="TERMOGR&#xc1;FICA"/>
+                <StringItem index="8" value="RECLAMA&#xc7;&#xc3;O_DE_TENS&#xc3;O"/>
               </StringArray>
             </Property>
           </Properties>
@@ -800,17 +800,16 @@
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane2" min="-2" pref="95" max="-2" attributes="0"/>
+                  <Component id="jScrollPane2" pref="115" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
