Request material Part 2

--- a/src/main/java/com/mycompany/ala/gui/MaterialRequestView.form
+++ b/src/main/java/com/mycompany/ala/gui/MaterialRequestView.form
@@ -105,10 +105,12 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" pref="0" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="btnAddCustomMaterial" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnModifierMaterial" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btnAddCustomMaterial" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnModifierMaterial" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane3" min="-2" pref="202" max="-2" attributes="0"/>
@@ -147,6 +149,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Inserir"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddBasicMaterialActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnAddCustomMaterial">
           <Properties>
